# product-sentiment

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt  reviews.jsonl  scrape.py  tokopedia.html
