[project]
name = "product-sentiment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sam Fareez", email = "vsefareez@gmail.com"},
]
dependencies = ["scrapy>=2.13.0", "scrapy-zyte-api>=0.29.0", "python-dotenv>=1.1.0", "scrapy-playwright>=0.0.43", "chompjs>=1.3.1", "jupyter>=1.1.1", "pandas>=2.2.3", "emoji>=2.14.1", "Sastrawi>=1.0.1", "nltk>=3.9.1", "swifter[notebook]>=1.4.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
scrape = "scrapy runspider scrape.py"
[dependency-groups]
dev = [
    "rich>=14.0.0",
]
