[project]
name = "product-sentiment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sam Fareez", email = "vsefareez@gmail.com"},
]
dependencies = ["scrapy>=2.13.0", "scrapy-zyte-api>=0.29.0", "python-dotenv>=1.1.0", "jupyter>=1.1.1", "pandas>=2.2.3", "emoji>=2.14.1", "Sastrawi>=1.0.1", "nltk>=3.9.1", "gensim>=4.3.3", "scikit-learn>=1.6.1", "xgboost>=3.0.1", "tensorflow>=2.19.0", "matplotlib>=3.10.3", "seaborn>=0.13.2"]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
scrape = "scrapy runspider scrape.py"
[dependency-groups]
dev = [
    "rich>=14.0.0",
]
